src/test/ui/proc-macro/invalid-punct-ident-3.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-3.rs:10:1
   |
LL | invalid_raw_ident!();
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: `self` cannot be a raw identifier

error: aborting due to previous error

